--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "next": "15.5.0",
     "react": "19.1.0",
